--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="container">
         <div class="header-actions" id="headerActions">
+            <button id="backupBtn" class="backup-btn" onclick="backupData()">
+                <i class="fas fa-download"></i> 백업
+            </button>
+            <button id="restoreBtn" class="restore-btn" onclick="restoreData()">
+                <i class="fas fa-upload"></i> 복원
+            </button>
             <button id="resetBtn" class="reset-btn" onclick="resetToDefault()">기본 데이터로 리셋</button>
             <button id="viewBtn" class="view-btn" onclick="window.location.href='view.html'">
                 <i class="fas fa-eye"></i> 배포용 보기
@@ -19,6 +25,7 @@
             </button>
             <button id="editBtn" class="edit-btn">편집하기</button>
         </div>
+        <input type="file" id="restoreFileInput" accept=".json" style="display: none;" onchange="handleRestoreFile(event)">
 
         <div class="profile-section" id="profileSection">
             <div class="profile-header">
